--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@shadcn/ui": "^0.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "embla-carousel-react": "^8.1.3",
     "git": "^0.1.5",
     "lucide": "^0.379.0",
